# rlhf

./: .gitignore  README.md  pyproject.toml  requirements-rlhf.txt  requirements.txt
configs/rlhf/: qwen25_05b_helpsteer3_eval1024_curation.json  qwen25_05b_helpsteer3_eval_suite.yaml  qwen25_05b_helpsteer3_ppo.yaml  qwen25_05b_helpsteer3_reward.yaml  qwen25_05b_helpsteer3_sft.yaml
configs/rlhf/archive_pairwise_eval/: qwen25_05b_helpsteer3_eval.yaml  qwen25_05b_helpsteer3_eval_curation_long.yaml  qwen25_05b_helpsteer3_eval_full.yaml  qwen25_05b_helpsteer3_eval_sft.yaml  qwen25_05b_helpsteer3_eval_sft_full.yaml  qwen25_05b_helpsteer3_eval_sft_vs_ppo.yaml  qwen25_05b_helpsteer3_eval_sft_vs_ppo_full.yaml
configs/trl/: qwen25_05b_helpsteer3_eval_suite.yaml  qwen25_05b_helpsteer3_ppo.yaml  qwen25_05b_helpsteer3_reward.yaml  qwen25_05b_helpsteer3_sft.yaml
docs/: experiment_tracking.md  rlhf_a100_run_notes.md  rlhf_colab_training.ipynb  rlhf_curation_guide.md  rlhf_experiments.md  rlhf_future_work.md  rlhf_qualitative_audit.md  trl_migration.md
docs/latex/: rlhf_project_report.tex
experiments/baselines/qwen25_05b_helpsteer3_ppo_long512/: README.md  (+5 more)
notebooks/: a.txt  analyzing_full_eval_results.ipynb  rlhf_full_eval_and_curation.ipynb  rlhf_trl_colab_pipeline.ipynb  rlhf_trl_colab_pipeline_raw.ipynb
scripts/: _bootstrap.py  diagnostics.py  rlhf_audit_policy_suite.py  rlhf_compare_eval_summaries.py  rlhf_compare_runs.py  rlhf_evaluate_before_after.py  rlhf_evaluate_policy_suite.py  rlhf_inspect_run.py  rlhf_length_diagnostics.py  rlhf_plot_metrics.py  rlhf_prepare_helpsteer3.py  rlhf_train_ppo.py  rlhf_train_reward_model.py  rlhf_train_sft_policy.py  rlhf_trl_doctor.py  rlhf_trl_prepare_data.py  rlhf_trl_train_ppo.py  rlhf_trl_train_reward_model.py  rlhf_trl_train_sft.py
src/rlhf/: __init__.py  config.py  data.py  evaluate.py  evaluate_suite.py  experiment.py  formatting.py  lm_policy.py  metrics.py  ppo_buffer.py  ppo_lm.py  reward_model.py  rollout.py  train_ppo.py  train_reward_model.py  train_sft.py  trl_callbacks.py  trl_common.py  trl_data.py  trl_models.py  trl_train_ppo.py  trl_train_reward.py  trl_train_sft.py
