[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-research"
version = "0.1.0"
description = "Reproducible SFT, reward modeling, PPO, and evaluation for language-model alignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.26,<2",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "pandas>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
trl = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "torchaudio==2.6.0",
  "trl[peft]==1.6.0",
  "transformers>=4.56.2,<5",
  "datasets>=4.7,<5",
  "accelerate>=1.6,<2",
  "peft>=0.15,<1",
  "bitsandbytes>=0.45.0",
  "safetensors>=0.4.5",
  "sentencepiece>=0.2.0",
  "protobuf>=5.26.0,<6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rlhf*"]
