[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-research"
version = "0.1.0"
description = "Reproducible SFT, reward modeling, PPO, and evaluation for language-model alignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "PyYAML",
  "matplotlib",
  "pandas",
  "tqdm",
]

[project.optional-dependencies]
trl = [
  "torch",
  "torchvision",
  "torchaudio",
  "torchao",
  "trl[peft]",
  "transformers",
  "datasets",
  "accelerate",
  "peft",
  "bitsandbytes",
  "safetensors",
  "sentencepiece",
  "protobuf",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rlhf*"]
